[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "propellerads-python"
version = "1.0.0"
description = "Professional PropellerAds SSP API v5 Python Client"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PropellerAds Team", email = "api@propellerads.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.9.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.3.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pavelraiden/propellerads-api-encyclopedia"
Documentation = "https://github.com/pavelraiden/propellerads-api-encyclopedia/docs"
Repository = "https://github.com/pavelraiden/propellerads-api-encyclopedia"
